tests/baselines/reference/forInStatement4.errors.txt
==== tests/cases/compiler/forInStatement4.ts (1 errors) ====
    var expr: any;
    for (var a: number in expr) {
         ~~~~~~~~~~~~~
!!! forInStatement4.ts(2,6): error TS2115: Variable declarations of a 'for' statement cannot use a type annotation.
    }